--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -144,18 +144,18 @@ This is the introduction.
 
 
 \chapter{Background and Related Work} 
-This chapter is broken down into two sections. The first section presents an introduction to the background knowledge that will be needed throughout this thesis. The second section presents the related work to this thesis and provides a brief discussion on the differences and similarities of each work from the context of this thesis.  
+This chapter is broken down into two sections. The first section presents an introduction to the background knowledge that will be needed throughout this thesis. The second section presents related work and provides a brief discussion on the differences and similarities of each.  
 
 \section{Background}
 \label{background}
-For this thesis there are two areas of background that need to be discussed: qualitative spatial reasoning and constraint logic programming. Qualitative spatial reasoning plays a mediating role in the CRR between the high level semantics of the design space to the low level geometric space of a CAAD based design representation. Constraint logic programming is used to solve spatial constraint problems.
+For this thesis there are two areas of background that need to be discussed: Qualitative Spatial Reasoning (QSR) and Constraint Logic Programming (CLP). QSR plays a mediating role within the CRR between the high level semantics of a design to the low level geometric quantities of a CAAD based representation. CLP is used in the CRR to solve spatial constraint problems.
 
 \subsection{Qualitative Spatial Representation and Reasoning}
 The field of Qualitative Spatial Reasoning (QSR) investigates techniques for representing and reasoning about abstract features of space in a computational framework while preserving its fundamental properties. The aim of which is to represent space at a level of abstraction that hides unnecessary details while preserving important domain specific aspects \cite{freksa1991qsr} \cite{bhattSpatialComputing}. 
 
-Take for example the task of describing the relative location of a chair within a room. To solve this task it is unnecessary to have knowledge about the precise spatial characteristics of the room -- such as the size, shape, and weight of objects, metric measurements such as distance, etc. -- because the solution does not require a precise and absolute location of the chair. Rather, a qualitative description of the room in terms of the orientational relationships between objects and the observer (\emph{left-of, righ-of, behind}) within the room should suffice. A specific qualitative description for this problem could be, the chair is \emph{left-of} the doorway and \emph{behind} the desk. This problem was solved from a qualitative spatial perspective by abstracting away the insignificant details and focusing on the aspects of space that are necessary for the problem and the domain. 
+Take for example the task of describing the relative location of a chair within a room. To solve this task it is unnecessary to have knowledge about the precise spatial characteristics of the room -- such as the size, shape, and weight of objects, metric measurements such as distance, etc. -- because the solution does not require an absolute location of the chair. Rather, a qualitative description of the room in terms of the orientational relationships between objects and the observer (\emph{left-of, righ-of, behind}) within the room should suffice. A specific qualitative description for this problem could be, the chair is \emph{left-of} the doorway and \emph{behind} the desk. This problem was solved from a qualitative spatial perspective by abstracting away the insignificant details and focusing on the aspects of space that are necessary for the problem domain. 
 
-The qualitative description used in the example above is informal. Formal qualitative representations of space preserve universal aspects of space such as uniqueness (objects exist exactly once each location can have at most one object), and spatial conceptual structures (properties that related to transitions between spatial relationships) while providing a computational apparatus to reason about space from an abstract level \cite{freksa1991qsr}. The following subsection will introduce several formal qualitative spatial representation calculi with respect to topology and orientation. 
+The qualitative description used in the example above is informal. Formal qualitative representations of space preserve universal aspects of space such as uniqueness (objects exist exactly once each location can have at most one object), and conceptual spatial structures (properties that related the composition of spatial arrangements) while providing a computational apparatus to reason about space from an abstract level \cite{freksa1991qsr}. The following subsection will introduce several formal qualitative spatial representation calculi with respect to topology and orientation. 
 
 %The advantages to QSR include reducing the search space of the spatial environment, using a higher level of abstraction that is closer to the conceptual representation of space that humans use...
 
@@ -171,17 +171,20 @@ The qualitative description used in the example above is informal. Formal qualit
 \label{Qualitative Spatial Calculi}
 \end{figure}
 
-Formal qualitative spatial calculi are explicit characterizations of qualitative spatial relationships from a given perspective, i.e. topology, orientation, distance, etc., that logically define intrinsic spatial properties such as spatial uniqueness and spatial composition. Examples of qualitative spatial calculi include the Region Connection Calculus (RCC) \cite{Randell92aspatial} for topological relationships, and the Single Cross Calculus (SCC) \cite{Freksa92usingorientation} and Oriented Point Relation Algebra (OPRA) \cite{Moratz} for orientational relationships.
+Formal qualitative spatial calculi are explicit characterizations of qualitative spatial relationships from a given perspective, i.e. topology, orientation, distance, etc., that logically define intrinsic spatial properties such as spatial uniqueness and spatial composition. Examples of qualitative spatial calculi include the Region Connection Calculus (RCC) \cite{Randell92aspatial} for topological relationships, the Single Cross Calculus (SCC) for extrinsic orientational relationships \cite{Freksa92usingorientation} and Oriented Point Relation Algebra (OPRA) \cite{Moratz} for intrinsic orientational relationships.
 
-RCC defines eight topological relationships over regions: disconnected, partial overlap, externally connected, equals, non-tangential proper part, inverse non-tangential proper part, tangential proper part, and inverse tangential proper part. Refer to figure \ref{RCC} for an illustration of the relationships. Axiomatic rules of jointly exhaustive, mutually disjoint and pairwise disjoint (JEPD) enforce the spatial uniques of each relationship. For example, two regions may not be partially overlapping and disconnected with each other at the same time. Additionally, composition tables define the realizable spatial arrangements of a set of regions. For example, if region \emph{A} is inside region \emph{B} and region \emph{B} is inside region \emph{C}, then region \emph{A} must also be in region \emph{C}.
+RCC defines eight topological relationships over regions: disconnected, partial overlap, externally connected, equals, non-tangential proper part, inverse non-tangential proper part, tangential proper part, and inverse tangential proper part. Refer to figure \ref{RCC} for an illustration of the relationships. Axiomatic rules of jointly exhaustive, mutually disjoint and pairwise disjoint (JEPD) enforce the spatial uniques of each relationship. For example, two regions may \emph{not} be partially overlapping and disconnected with each other at the same time. Additionally, composition tables define the realizable spatial arrangements of a set of regions. For example, if region \emph{A} is inside region \emph{B} and region \emph{B} is inside region \emph{C}, then region \emph{A} must also be in region \emph{C}.
 
-Orientational spatial relationships can be broken down into intrinsic and extrinsic relationships. Extrinsic orientational relationship define a relationship based on an external reference point. This type of relationship is characterized in SCC, in which external reference point is used to related two objects together. Figure \ref{SCC} illustrates SCC partitioning of space. Intrinsic orientational relationships define a spatial relationship based on an observers internal perspective. This type of relationship is characterized in OPRA, in which the relationship of an external object is defined by the internal direction of the observing object. Figure \ref{OPRA} shows the relationship between two points, \emph{A} and \emph{B}. This example shows the OPRA$_{2}$ relationship from the intrinsic perspective of both points in which point \emph{B} has an OPRA relationship with \emph{A} of \emph{7} and point \emph{A} has an OPRA relationship with \emph{B} of \emph{1}. As with RCC, axiomatic rules of JEPD and composition tables enforce spatial properties of uniqueness and composition.
+Orientational spatial relationships can be broken down into intrinsic and extrinsic relationships. Extrinsic orientational relationship define a relationship based on an external reference point. This type of relationship is characterized in SCC, in which an external reference point is used to related two point based objects together. Figure \ref{SCC} illustrates SCC partitioning of space. Intrinsic orientational relationships define a spatial relationship based on an observers internal perspective. This type of relationship is characterized in OPRA, in which the relationship of an external object is defined by the internal direction of the observing object. Figure \ref{OPRA} shows the relationship between two points, \emph{A} and \emph{B}. In this example point \emph{B} has an OPRA$_{2}$ relationship with \emph{A} of \emph{7} and point \emph{A} has an OPRA$_{2}$ relationship with \emph{B} of \emph{1}. As with RCC, axiomatic rules of JEPD and composition tables enforce spatial properties of uniqueness and composition.
 
 \subsection{Constraint Logic Programming}
-Constraint Logic Programming (CLP) combines logic programing (LP) with constraint solving \cite{GavanelliCLP} \cite{WallaceCLP}. Logic programming is based on declarative semantics in which a program is defined in terms of \emph{what} should be computed instead of \emph{how} the programing should compute something (i.e. procedural style). In this regard logic programing languages rely on built-in search and unification algorithms to automatically solve logic based formula and can be viewed as a form of constraint solving. 
+Constraint Logic Programming (CLP) combines logic programing with constraint solving \cite{GavanelliCLP} \cite{WallaceCLP}. Logic programming is based on declarative semantics in which a program is defined in terms of \emph{what} should be computed instead of \emph{how} the program should compute something (i.e. procedural style). In this regard a logic programing language relies on built-in search and unification algorithms to automatically solve logic based formula. This type of computation can be viewed as a form of constraint solving \cite{tbd lp paper}. 
 
-For example, Prolog \cite{prolog} is one of the most well known and used logic programming languages and is based on predicate logic, unification, logic conjunction, and depth-first search. From a constraint perspective, Prolog solves constraints over the set of uninterpreted structures (trees), i.e. Prolog's unification algorithm works entirely on a syntactic level. What this means is that Prolog does not internally 'know' about any of the semantics of internal data, and only unifies terms based on their syntax. Take for example arithmetic expression 5 + 1 = 6. In (pure) Prolog this expression will be evaluated to false because equality holds only when two terms are syntactically identical. 
+For example, Prolog, one of the most well known and used logic programming languages, is based on predicate logic, unification, logic conjunction, and depth-first search \cite{tbd prolog paper}. From a constraint perspective, Prolog solves constraints over the set of uninterpreted structures, i.e. Prolog's unification algorithm works entirely on a syntactic level. What this means is that Prolog does not internally know about any of the semantics of internal data, and can only unify terms based on their syntax. Take for example the arithmetic expression 5 + 1 = 6. In Prolog this expression will fail because equality holds only when two terms are syntactically identical (6 = 6).  
 
+Constraint solving techniques can help logic programming by increasing the expressiveness of the language. In general, constraint solving is based on constraints, which are simply restrictions over a the values a set of variables can bind to. For specific constraint solvers, the variables and the constraints over the variables are based on a specific domain, such as arithmetic expressions, boolean logic, etc., which encode the semantics and unification algorithms for solving the logical formula directly in a logic based language. In the example above, an constraint solver for arithmetic expression would be able to resolve the expression 5 + 1 = 6 as true because it knows directly about the semantics of addition and equality. 
+
+Building a new constraint solver can be difficult because it usually requires that the constraint solver is \emph{hard-wired} into a complier or interpreter \cite{GavanelliCLP}. The use of Constraint Handling Rules (CHR) can help this process by providing a high level programming framework designed for the implementation and integrate constraint solvers into logic based languages. The aim is ease the process of building constraint solvers in terms of defining a new domain of constraints and integrating these constraints into a logic programming framework \cite{tbd CHR}. CHR works by using logic based rules that rewrite constraints via simplification and propagation rules and constraints are solved by continually rewriting constraints until they are in a solvable form. Because these rules are based on logic themselves it integrates seamlessly into other logic based frameworks. 
 
 
 \section{Related Works}
